DMC-E系列控制卡例程/VB6.0/例3_回原点运动/LTDMC.bas


        Declare Function dmc_set_vector_profile_multicoor Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal Min_Vel As Double, ByVal Max_Vel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal Stop_vel As Double) As Integer
        Declare Function dmc_get_vector_profile_multicoor Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByRef Min_Vel As Double, ByRef Max_Vel As Double, ByRef Tacc As Double, ByRef Tdec As Double, ByRef Stop_vel As Double) As Integer
        Declare Function dmc_set_vector_s_profile_multicoor Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal s_mode As Integer, ByVal s_para As Double) As Integer
        Declare Function dmc_get_vector_s_profile_multicoor Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal s_mode As Integer, ByRef s_para As Double) As Integer
        
        Declare Function dmc_set_vector_profile_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal Min_Vel As Double, ByVal Max_Vel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal Stop_vel As Double) As Integer    '单段插补速度参数
        Declare Function dmc_get_vector_profile_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByRef Min_Vel As Double, ByRef Max_Vel As Double, ByRef Tacc As Double, ByRef Tdec As Double, ByRef Stop_vel As Double) As Integer
        Declare Function dmc_set_vector_s_profile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal s_mode As Integer, ByVal s_para As Double) As Integer
        Declare Function dmc_get_vector_s_profile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal s_mode As Integer, ByRef s_para As Double) As Integer
        '直线插补
        Declare Function dmc_line_multicoor Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef DistList As Long, ByVal posi_mode As Integer) As Integer     '指定轴直线插补运动
        '平面圆弧
        Declare Function dmc_arc_move_multicoor Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByRef AxisList As Integer, ByRef target_Pos As Long, ByRef cen_Pos As Long, ByVal arc_dir As Integer, ByVal posi_mode As Integer) As Integer
   
        Declare Function dmc_line_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef target_Pos As Double, ByVal posi_mode As Integer) As Integer   '单段直线
        Declare Function dmc_arc_move_center_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef target_Pos As Double, ByRef cen_Pos As Double, ByVal arc_dir As Integer, ByVal CircleNum As Long, ByVal posi_mode As Integer) As Integer    '圆心终点式圆弧/螺旋线/渐开线
        Declare Function dmc_arc_move_radius_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef target_Pos As Double, ByVal arc_radius As Double, ByVal arc_dir As Integer, ByVal CircleNum As Long, ByVal posi_mode As Integer) As Integer   '半径终点式圆弧/螺旋线
        Declare Function dmc_arc_move_3points_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef target_Pos As Double, ByRef mid_pos As Double, ByVal CircleNum As Long, ByVal posi_mode As Integer) As Integer    '三点式圆弧/螺旋线
        Declare Function dmc_rectangle_move_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef target_Pos As Double, ByRef Mark_Pos As Double, ByVal Count As Long, ByVal rect_mode As Integer, ByVal posi_mode As Integer) As Integer
        
         'PVT运动
        Declare Function dmc_PvtTable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Count As Long, ByRef pTime As Double, ByRef pPos As Long, ByRef pVel As Double) As Integer
        Declare Function dmc_PtsTable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Count As Long, ByRef pTime As Double, ByRef pPos As Long, ByRef pPercent As Double) As Integer
        Declare Function dmc_PvtsTable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Count As Long, ByRef pTime As Double, ByRef pPos As Long, ByVal velBegin As Double, ByVal velEnd As Double) As Integer
        Declare Function dmc_PttTable Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Count As Long, ByRef pTime As Double, ByRef pPos As Long) As Integer
        Declare Function dmc_PvtMove Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer) As Integer
        
        Declare Function dmc_PttTable_add Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Count As Long, ByRef pTime As Double, ByRef pPos As Long) As Integer
        Declare Function dmc_PtsTable_add Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Count As Long, ByRef pTime As Double, ByRef pPos As Long, ByRef pPercent As Double) As Integer
        Declare Function dmc_pvt_get_remain_space Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer
        
        Declare Function dmc_pvt_table_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Count As Long, ByRef pTime As Double, ByRef pPos As Double, ByRef pVel As Double) As Integer
        Declare Function dmc_pts_table_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Count As Long, ByRef pTime As Double, ByRef pPos As Double, ByRef pPercent As Double) As Integer
        Declare Function dmc_pvts_table_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Count As Long, ByRef pTime As Double, ByRef pPos As Double, ByVal velBegin As Double, ByVal velEnd As Double) As Integer
        Declare Function dmc_ptt_table_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Count As Long, ByRef pTime As Double, ByRef pPos As Double) As Integer
        Declare Function dmc_pvt_move Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer) As Integer
        
        Declare Function dmc_SetGearProfile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal MasterType As Integer, ByVal MasterIndex As Integer, ByVal MasterEven As Long, ByVal SlaveEven As Long, ByVal MasterSlope As Long) As Integer
        Declare Function dmc_GetGearProfile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef MasterType As Integer, ByRef MasterIndex As Integer, ByRef MasterEven As Long, ByRef SlaveEven As Long, ByRef MasterSlope As Long) As Integer
        Declare Function dmc_GearMove Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer) As Integer
        
         '回零运动
        Declare Function dmc_set_home_pin_logic Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal org_logic As Integer, ByVal filter As Double) As Integer         '设置HOME信号
        Declare Function dmc_get_home_pin_logic Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef org_logic As Integer, ByRef filter As Double) As Integer     '读取设置HOME信号
        Declare Function dmc_set_homemode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal home_dir As Integer, ByVal vel_mode As Double, ByVal mode As Integer, ByVal EZ_count As Integer) As Integer '设定指定轴的回原点模式
        Declare Function dmc_get_homemode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef home_dir As Integer, ByRef vel_mode As Double, ByRef home_mode As Integer, ByRef EZ_count As Integer) As Integer '读取指定轴的回原点模式
        Declare Function dmc_home_move Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer
        Declare Function dmc_set_home_profile_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Low_Vel As Double, ByVal High_Vel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer '设定回零速度曲线参数
        Declare Function dmc_get_home_profile_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef Low_Vel As Double, ByRef High_Vel As Double, ByRef Tacc As Double, ByRef Tdec As Double) As Integer '读取回零速度曲线参数
        Declare Function dmc_get_home_result Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef state As Integer) As Integer
        Declare Function dmc_set_home_position_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal position As Double) As Integer
        Declare Function dmc_get_home_position_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef position As Double) As Integer
        Declare Function dmc_set_el_home Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal mode As Integer) As Integer
        
        '原点锁存
        '3800,3600,5800,5600专用
        Declare Function dmc_set_homelatch_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal logic As Integer, ByVal Source As Integer) As Integer
        Declare Function dmc_get_homelatch_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef logic As Integer, ByRef Source As Integer) As Integer
        Declare Function dmc_get_homelatch_flag Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Long
        Declare Function dmc_reset_homelatch_flag Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer
        Declare Function dmc_get_homelatch_value Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Long
        'ez锁存
        Declare Function dmc_set_ezlatch_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal logic As Integer, ByVal Source As Integer) As Integer
        Declare Function dmc_get_ezlatch_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef logic As Integer, ByRef Source As Integer) As Integer
        Declare Function dmc_get_ezlatch_flag Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Long
        Declare Function dmc_reset_ezlatch_flag Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer
        Declare Function dmc_get_ezlatch_value Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Long
